[workspace]
resolver = "2"

members = [
    "soroban-sdk",
    "soroban-sdk-macros",
    "soroban-spec",
    "soroban-spec-rust",
    "soroban-ledger-snapshot",
    "soroban-token-sdk",
    "tests/*",
]

[workspace.package]
version = "22.0.0"
rust-version = "1.74.0"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", path = "soroban-sdk" }
soroban-sdk-macros = { version = "22.0.0", path = "soroban-sdk-macros" }
soroban-spec = { version = "22.0.0", path = "soroban-spec" }
soroban-spec-rust = { version = "22.0.0", path = "soroban-spec-rust" }
soroban-ledger-snapshot = { version = "22.0.0", path = "soroban-ledger-snapshot" }
soroban-token-sdk = { version = "22.0.0", path = "soroban-token-sdk" }

[workspace.dependencies.soroban-env-common]
version = "=22.0.0"
git = "https://github.com/jayz22/rs-soroban-env"
rev = "d4e12c76d19d3f0e1491637d2acb0cc171135725"

[workspace.dependencies.soroban-env-guest]
version = "=22.0.0"
git = "https://github.com/jayz22/rs-soroban-env"
rev = "d4e12c76d19d3f0e1491637d2acb0cc171135725"

[workspace.dependencies.soroban-env-host]
version = "=22.0.0"
git = "https://github.com/jayz22/rs-soroban-env"
rev = "d4e12c76d19d3f0e1491637d2acb0cc171135725"

[workspace.dependencies.stellar-strkey]
version = "=0.0.8"

[workspace.dependencies.stellar-xdr]
version = "=22.0.0"
default-features = false
features = ["curr"]
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "5315f4c583784860c0accbb8d3bd234055a19751"

#[patch."https://github.com/stellar/rs-soroban-env"]
#soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
#soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
#soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
#[patch."https://github.com/stellar/rs-stellar-xdr"]
#stellar-xdr = { path = "../rs-stellar-xdr/" }

[profile.dev]
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
